--- a/frontend/templates/checkout.html
+++ b/frontend/templates/checkout.html
@@ -8,12 +8,12 @@
 {% if cart_products %}
 <div class="row">
     <div class="col-md-8">
-        <div class="card mb-4">
-            <div class="card-header">
-                <h5 class="mb-0">Shipping Information</h5>
-            </div>
-            <div class="card-body">
-                <form>
+        <form action="{{ url_for('place_order') }}" method="post">
+            <div class="card mb-4">
+                <div class="card-header">
+                    <h5 class="mb-0">Shipping Information</h5>
+                </div>
+                <div class="card-body">
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <label for="firstName" class="form-label">First Name</label>
@@ -31,8 +31,8 @@
                     </div>
                     
                     <div class="mb-3">
-                        <label for="address" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="address" required>
+                        <label for="shipping_address" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="shipping_address" name="shipping_address" required>
                     </div>
                     
                     <div class="row mb-3">
@@ -55,50 +55,48 @@
                             <input type="text" class="form-control" id="zip" required>
                         </div>
                     </div>
-                </form>
-            </div>
-        </div>
-        
-        <div class="card">
-            <div class="card-header">
-                <h5 class="mb-0">Payment Method</h5>
-            </div>
-            <div class="card-body">
-                <div class="form-check mb-3">
-                    <input class="form-check-input" type="radio" name="paymentMethod" id="creditCard" checked>
-                    <label class="form-check-label" for="creditCard">
-                        Credit Card
-                    </label>
                 </div>
-                
-                <div id="creditCardForm">
+            </div>
+            
+            <div class="card mb-4">
+                <div class="card-header">
+                    <h5 class="mb-0">Payment Method</h5>
+                </div>
+                <div class="card-body">
                     <div class="mb-3">
-                        <label for="cardNumber" class="form-label">Card Number</label>
-                        <input type="text" class="form-control" id="cardNumber" placeholder="XXXX XXXX XXXX XXXX">
+                        <label for="payment_method" class="form-label">Select Payment Method</label>
+                        <select class="form-select" id="payment_method" name="payment_method" required>
+                            <option value="credit_card">Credit Card</option>
+                            <option value="paypal">PayPal</option>
+                        </select>
                     </div>
                     
-                    <div class="row mb-3">
-                        <div class="col-md-6">
-                            <label for="expiryDate" class="form-label">Expiry Date</label>
-                            <input type="text" class="form-control" id="expiryDate" placeholder="MM/YY">
+                    <div id="creditCardForm">
+                        <div class="mb-3">
+                            <label for="cardNumber" class="form-label">Card Number</label>
+                            <input type="text" class="form-control" id="cardNumber" placeholder="XXXX XXXX XXXX XXXX">
                         </div>
-                        <div class="col-md-6">
-                            <label for="cvv" class="form-label">CVV</label>
-                            <input type="text" class="form-control" id="cvv" placeholder="XXX">
+                        
+                        <div class="row mb-3">
+                            <div class="col-md-6">
+                                <label for="expiryDate" class="form-label">Expiry Date</label>
+                                <input type="text" class="form-control" id="expiryDate" placeholder="MM/YY">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="cvv" class="form-label">CVV</label>
+                                <input type="text" class="form-control" id="cvv" placeholder="XXX">
+                            </div>
                         </div>
                     </div>
                 </div>
-                
-                <div class="form-check mb-3">
-                    <input class="form-check-input" type="radio" name="paymentMethod" id="paypal">
-                    <label class="form-check-label" for="paypal">
-                        PayPal
-                    </label>
-                </div>
             </div>
-        </div>
+            
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary btn-lg">Place Order</button>
+            </div>
+        </form>
     </div>
-    
+
     <div class="col-md-4">
         <div class="card">
             <div class="card-header">
@@ -123,20 +121,17 @@
                     <span>${{ (total + 5.99 + (total * 0.08))|round(2) }}</span>
                 </div>
                 
-                <form action="{{ url_for('place_order') }}" method="post" class="mt-3">
-                    <div class="mb-3">
-                        <label for="shippingAddress" class="form-label">Shipping Address</label>
-                        <input type="text" class="form-control" id="shippingAddress" name="shipping_address" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="paymentMethod" class="form-label">Payment Method</label>
-                        <select class="form-select" id="paymentMethod" name="payment_method" required>
-                            <option value="credit_card">Credit Card</option>
-                            <option value="paypal">PayPal</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Place Order</button>
-                </form>
+                <div class="mt-3">
+                    <h6>Items in Cart:</h6>
+                    <ul class="list-group">
+                        {% for product in cart_products %}
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            {{ product.name }}
+                            <span>${{ product.price }}</span>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
